Bug 505487 - "Message filter rule incorrectly matching/firing" [r+sr=Standard8]